; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_bio_enc_test.c_do_test_bio_cipher.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_bio_enc_test.c_do_test_bio_cipher.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KEY = common dso_local global i32 0, align 4
@IV = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @do_test_bio_cipher to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_test_bio_cipher(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %16 [
    i32 0, label %7
    i32 1, label %11
  ]

7:                                                ; preds = %2
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @KEY, align 4
  %10 = call i32 @do_bio_cipher(i32* %8, i32 %9, i32* null)
  store i32 %10, i32* %3, align 4
  br label %17

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @KEY, align 4
  %14 = load i32*, i32** @IV, align 8
  %15 = call i32 @do_bio_cipher(i32* %12, i32 %13, i32* %14)
  store i32 %15, i32* %3, align 4
  br label %17

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %16, %11, %7
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @do_bio_cipher(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
